feat: init window

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "private": true,
   "scripts": {
     "postinstall": "cd ./out && pnpm i alemonjs@latest",
-    "dev-mac": "vite",
     "dev": "chcp 65001 && vite",
+    "dev-mac": "vite",
     "build": "tsc && vite build && npx electron .\\electron-main.js && electron-builder --config electron-builder.cjs",
     "preview": "vite preview",
     "pree2e": "vite build --mode=test",
@@ -47,8 +47,9 @@
     "lint-staged": "^15.2.2",
     "lodash": "^4.17.21",
     "postcss": "^8.4.38",
-    "preline": "^2.4.1",
     "postcss-import": "^16.1.0",
+    "preline": "^2.4.1",
+    "prettier": "^3.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
