--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "alemon-desktop",
+  "name": "alemonjs-desktop",
   "version": "0.0.1",
   "main": "dist-electron/main/index.js",
   "author": "bietiaop",
@@ -7,9 +7,9 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "postinstall": "cd ./out && pnpm i alemonjs@latest",
-    "dev": "chcp 65001 && vite",
-    "dev-mac": "vite",
+    "postinstall": "cd ./out && yarn add alemonjs@latest",
+    "dev": "vite",
+    "dev-win": "chcp 65001 && vite",
     "build": "tsc && vite build && npx electron .\\electron-main.js && electron-builder --config electron-builder.cjs",
     "preview": "vite preview",
     "pree2e": "vite build --mode=test",
@@ -67,7 +67,7 @@
     "vite-plugin-electron": "^0.28.4",
     "vite-plugin-electron-renderer": "^0.14.5"
   },
-  "packageManager": "pnpm@8.15.4",
+  "packageManager": "yarn@1.19.1",
   "debug": {
     "env": {
       "VITE_DEV_SERVER_URL": "http://127.0.0.1:7777/"
