--- a/package.json
+++ b/package.json
@@ -24,9 +24,8 @@
     "systeminformation": "^5.22.6"
   },
   "devDependencies": {
-    "bytenode": "^1.5.6",
+    "classnames": "^2.5.1",
     "@ant-design/icons": "^5.2.6",
-    "axios": "^1.6.8",
     "@playwright/test": "^1.42.1",
     "@reduxjs/toolkit": "^2.2.2",
     "@types/cacheable-request": "^8.3.2",
@@ -39,11 +38,14 @@
     "alemonjs": "2.0.0-rc.6",
     "antd": "^5.15.3",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.6.8",
+    "bytenode": "^1.5.6",
     "clsx": "^2.1.0",
     "echarts": "^5.5.0",
     "electron": "^29.1.5",
     "electron-builder": "^24.13.3",
     "husky": "^9.1.6",
+    "lineicons": "^1.0.3",
     "lint-staged": "^15.2.2",
     "lodash": "^4.17.21",
     "postcss": "^8.4.38",
