--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   "dependencies": {
     "electron-log": "^5.1.2",
     "electron-updater": "^6.1.8",
-    "systeminformation": "^5.22.6"
+    "systeminformation": "^5.22.6",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
-    "classnames": "^2.5.1",
     "@ant-design/icons": "^5.2.6",
     "@playwright/test": "^1.42.1",
     "@reduxjs/toolkit": "^2.2.2",
@@ -40,6 +40,7 @@
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
     "bytenode": "^1.5.6",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.0",
     "echarts": "^5.5.0",
     "electron": "^29.1.5",
