--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "lineicons": "^1.0.3",
     "lint-staged": "^15.2.2",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "postcss": "^8.4.38",
     "postcss-import": "^16.1.0",
     "preline": "^2.4.1",
