--- a/resources/template/package.json
+++ b/resources/template/package.json
@@ -45,6 +45,7 @@
     "husky": "^9.0.11",
     "lvyjs": "^0.1.0",
     "pm2": "^5.3.0",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "yarn": "^1.22.22"
   }
 }
