--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "vite",
     "dev-win": "chcp 65001 && vite",
     "build": "tsc && vite build && electron-builder --config electron-builder.cjs",
+    "icons": "electron-icon-builder --input=./src/assets/logo.jpg --output=./ --flatten",
     "preview": "vite preview",
     "pree2e": "vite build --mode=test",
     "format": "prettier --write .",
@@ -18,10 +19,9 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "electron-log": "^5.1.2",
+    "electron-log": "^5.2.0",
     "electron-updater": "^6.1.8",
-    "systeminformation": "^5.22.6",
-    "ws": "^8.18.0"
+    "systeminformation": "^5.22.6"
   },
   "devDependencies": {
     "@ant-design/icons": "^5.2.6",
@@ -34,7 +34,6 @@
     "@types/react-dom": "^18.2.22",
     "@types/validator": "^13.11.9",
     "@vitejs/plugin-react": "^4.2.1",
-    "alemonjs": "2.0.0-rc.6",
     "antd": "^5.15.3",
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
@@ -43,7 +42,8 @@
     "clsx": "^2.1.0",
     "echarts": "^5.5.0",
     "electron": "^29.1.5",
-    "electron-builder": "^24.13.3",
+    "electron-builder": "^25.1.8",
+    "electron-icon-builder": "^2.0.1",
     "husky": "^9.1.6",
     "lineicons": "^1.0.3",
     "lint-staged": "^15.2.2",
@@ -68,7 +68,8 @@
     "validator": "^13.11.0",
     "vite": "^5.2.4",
     "vite-plugin-electron": "^0.28.4",
-    "vite-plugin-electron-renderer": "^0.14.5"
+    "vite-plugin-electron-renderer": "^0.14.5",
+    "ws": "^8.18.0"
   },
   "debug": {
     "env": {
