--- a/resources/template/package.json
+++ b/resources/template/package.json
@@ -40,6 +40,8 @@
     "@types/uuid": "^10.0.0",
     "@types/ws": "^8.5.5",
     "lvyjs": "^0.1.0",
-    "pm2": "^5.3.0"
+    "pm2": "^5.3.0",
+    "npm": "^10.9.0",
+    "yarn": "^1.22.22"
   }
 }
